# gaussian-splatting-cuda

./: CMakeLists.txt
fastgs/optimizer/include/: adam_kernels.cuh
fastgs/optimizer/src/: adam.cu  adam_api.cu
fastgs/rasterization/include/: buffer_utils.h  kernels_backward.cuh  kernels_forward.cuh  rasterization_api.h
fastgs/rasterization/src/: backward.cu  forward.cu  rasterization_api.cu
gsplat/: CMakeLists.txt
include/core/: fast_rasterizer_autograd.hpp  memory_monitor.hpp  parameters.hpp  splat_data.hpp
src/: application.cpp  argument_parser.cpp  bilateral_grid.cpp  camera.cpp  default_strategy.cpp  fast_rasterizer.cpp  fast_rasterizer_autograd.cpp  fused_adam.cpp  main.cpp  parameters.cpp  strategy.cpp  trainer.cpp  training_setup.cpp
src/core/: application.cpp  argument_parser.cpp  parameters.cpp  splat_data.cpp
src/loader/: loader_service.cpp
src/loader/formats/: colmap.cpp  ply.cpp
src/loader/loaders/: colmap_loader.cpp
src/project/: project.cpp
src/training/: dataset.hpp  trainer.cpp  training_setup.cpp
src/training/components/: bilateral_grid.cpp  bilateral_grid.hpp  poseopt.cpp  poseopt.hpp
src/training/kernels/: bilateral_grid_forward.cu
src/training/metrics/: metrics.hpp
src/training/optimizers/: fused_adam.cpp  fused_adam.hpp  scheduler.cpp  scheduler.hpp
src/training/rasterization/: fast_rasterizer.cpp  fast_rasterizer_autograd.cpp  fast_rasterizer_autograd.hpp  rasterizer.cpp
src/training/strategies/: mcmc.cpp  mcmc.hpp
src/visualizer/: visualizer_impl.cpp  visualizer_impl.hpp
src/visualizer/core/: data_loading_service.cpp  main_loop.cpp  viewer_state_manager.cpp  viewer_state_manager.hpp
src/visualizer/gui/: gui_manager.cpp  viewport_gizmo.cpp
src/visualizer/gui/panels/: crop_box_panel.cpp  main_panel.cpp  scene_panel.cpp  tools_panel.cpp  training_panel.cpp
src/visualizer/rendering/: cuda_gl_interop.cpp
src/visualizer/scene/: scene_manager.cpp
